<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginSignup.PasswordResetMessage"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/magnificent"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/checked_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_password_has_been_updated"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:textAllCaps="true"
            />
        <android.widget.Button
            android:id="@+id/reset_login_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>


    </LinearLayout>
</LinearLayout>