<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginSignup.SetNewPassword"
    android:scrollbars="none"
    android:background="@color/white"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_vpn_key_24"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_credential"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/magnificent"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_set_your_new_password_here"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="40dp"
            app:boxBackgroundColor="@color/lightWhite"
            android:hint="@string/new_password"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/lock_24"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="30dp"
            app:boxBackgroundColor="@color/lightWhite"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/lock_24"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/forget_ok_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OK"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>



</ScrollView>