<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginSignup.ForgetPasswordActivity"
    android:scrollbars="none"
    android:overScrollMode="ifContentScrolls"
    android:background="@color/white"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/general_lock_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/magnificent"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_detail"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:fontFamily="@font/magnificent"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="@color/lightWhite"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/phone_number"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            android:textColorHint="@color/black"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_forget_txt"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="12"/>
        </com.google.android.material.textfield.TextInputLayout>
        <android.widget.Button
            android:id="@+id/forget_nextBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_BTN"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>